tests/snapshots/assets__check_file@unit-comment-in-dict.typ-80.snap
---
source: tests/src/unit.rs
input_file: tests/fixtures/unit/comment/in-dict.typ
snapshot_kind: text
---
#(:
  // empty dict
)

#(
  a: 1, /* comment */ // another comment
  b/* comment */: 2,
  /* comment */ c: 3,
)

#(
  /* 1 */
  // first comment
  a: /* 2 */ /* 3 */ 1, /* 4 */ // second comment
  b/* 5 */: /* 6 */ 2,
  /* 7 */ c: 3, /* 8 */
  /* 9 */ d/* 10 */ /* 11 */: /* 12 */ /* 13 */ /* 14 */ 5, /* 15 */
  /* 16 */
)

#(
  a // 66
  /* a */: // 77
  7,
)

#(
  "b" // 88
  /* b */: // 99
  1,
)

#(a: 1)
#(a/**/: /**/ 1)
#(a/**/: /**/ 1)

#(:
  /* 1 */ /* 2 */ ../* 3 */(:),
  // 4
  ../* 5 */ /* 6 */ // 7
  (:), /* 8 */
)
