tests/snapshots/assets__check_file@unit-comment-line-attach.typ-40.snap
---
source: tests/src/unit.rs
input_file: tests/fixtures/unit/comment/line-attach.typ
snapshot_kind: text
---
#import "@preview/cheq:0.1.0": checklist

#{
  show: checklist.with(
    fill: luma(95%),
    stroke: blue,
    radius: .2em,
  ) // 复选框
}

#{
  show: checklist.with(
    fill: luma(95%),
    stroke: blue,
    radius: .2em,
  ) // 复选框
  123
}

#{
  // 复选框
  show: checklist.with(
    fill: luma(95%),
    stroke: blue,
    radius: .2em,
  )
}
